2003-08-28  Jeffrey Stedfast  <fejj@ximian.com>

	* em-folder-view.c (emfv_destroy): override the destroy method for
	GtkObject - unregister the mark-as-seen timeout if one is
	currently registered.
	(emfv_list_done_message_selected): Add the mark-as-seen timeout
	functionality here.

2003-08-27  Jeffrey Stedfast  <fejj@ximian.com>

	* em-utils.c (get_reply_list): Implemented.

2003-08-27  Not Zed  <NotZed@Ximian.com>

	* em-message-browser.c (emmb_activate): disable Edit->Paste menu
	always.

	* em-folder-browser.c (emfb_edit_paste): do a message-list paste,
	not a html one.
	(emfb_edit_cut, emfb_edit_copy, emfb_edit_paste): Moved to folder-view.

	* message-list.c (message_list_paste): trigger a paste action.
	(message_list_set_folder): added a uri argument, and save it
	internally, fixed all callers.
	(message_list_finalise): free the folder uri.

	* em-utils.c (em_utils_selection_set_mailbox): New helper to set
	the current selection as text in a berkely mailbox format.
	(em_utils_write_messages): helper to write stuff to a stream in
	mbox format.

2003-08-27  Not Zed  <NotZed@Ximian.com>

	* message-list.c (on_selection_changed_cmd): own/deown the primary
	selection when it changes.
	(message_list_init): init private data and invisible for
	selection.
	(message_list_destroy): free invisible.
	(message_list_finalise): free private data.
	(get_selected_cb): removed.
	(message_list_copy): new method to do copy and cut.  cut/copy to
	the clipboard.
	(ml_selection_clear_event): clear the right selection when
	requested.
	(message_list_has_primary_selection): helper to find out if the
	message-list has the selection.  is there a gtk way for this?

2003-08-26  Not Zed  <NotZed@Ximian.com>

	* mail-local.c (mlf_meta_set, mlf_meta_get): proxy meta-data stuff
	to subservient folder.

2003-08-23  Not Zed  <NotZed@Ximian.com>

	* em-folder-view.c (emfv_init): init preview here always.

2003-08-25  Jeffrey Stedfast  <fejj@ximian.com>
